<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeirEnterpriseApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert_contact">Insert Contact</string>
    <string name="editdata">Edit Data</string>
    <string name="sharedata">Share Data</string>
    <string name="add_tag">Add tag</string>
    <string name="readFile">Read File</string>
    <string name="writeFile">Write File</string>
    <string name="read_external">Read External</string>
    <string name="write_external">Write External</string>

</resources>
