<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.weirenterpriseapp.MainActivity" >

    <Button
    	android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addTag"
        android:text="@string/add_tag" />

    <Button
        android:id="@+id/shareData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="86dp"
        android:onClick="shareData"
        android:text="@string/sharedata" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="18dp"
        android:onClick="insertContact"
        android:text="@string/insert_contact" />

    <Button
        android:id="@+id/editData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareData"
        android:layout_below="@+id/shareData"
        android:layout_marginTop="22dp"
        android:onClick="editData"
        android:text="@string/editdata" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/shareData"
        android:layout_below="@+id/button1"
        android:layout_marginTop="15dp"
        android:onClick="readExternal"
        android:text="@string/read_external" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button1"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/button4"
        android:onClick="writeFile"
        android:text="@string/writeFile" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button5"
        android:onClick="writeExternal"
        android:text="@string/write_external" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editData"
        android:layout_marginTop="39dp"
        android:onClick="readFile"
        android:text="@string/readFile" />

</RelativeLayout>